; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/engines/extr_e_ossltest_err.c_ERR_unload_OSSLTEST_strings.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/engines/extr_e_ossltest_err.c_ERR_unload_OSSLTEST_strings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@error_loaded = common dso_local global i64 0, align 8
@lib_code = common dso_local global i32 0, align 4
@OSSLTEST_str_functs = common dso_local global i32 0, align 4
@OSSLTEST_str_reasons = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ERR_unload_OSSLTEST_strings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ERR_unload_OSSLTEST_strings() #0 {
  %1 = load i64, i64* @error_loaded, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %10

3:                                                ; preds = %0
  %4 = load i32, i32* @lib_code, align 4
  %5 = load i32, i32* @OSSLTEST_str_functs, align 4
  %6 = call i32 @ERR_unload_strings(i32 %4, i32 %5)
  %7 = load i32, i32* @lib_code, align 4
  %8 = load i32, i32* @OSSLTEST_str_reasons, align 4
  %9 = call i32 @ERR_unload_strings(i32 %7, i32 %8)
  store i64 0, i64* @error_loaded, align 8
  br label %10

10:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @ERR_unload_strings(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
